# refleckt_journal_app

./: .gitignore  LAMBDA_BUILDER.md  LICENSE  README.md  jest.config.js  mocha.config.js  package.json  tsconfig.json
.cargo/: config.toml
app/: layout.tsx  page.tsx
app/api/trpc/: route.ts
app/components/: ThemeToggle.tsx
app/config/: next-seo.config.ts
app/context/: ThemeContext.tsx
app/hooks/: useTRPC.ts  useTheme.ts
app/lib/: prisma.ts
app/providers/: TrpcProvider.tsx
backend/: .env.example  Dockerfile.build  Makefile  README.md  build.sh  clean.sh  docker-build.sh  rust-toolchain.toml  setup-and-test.sh  setup-env.sh  use-1.85.sh
backend/.aws-sam/: build.toml
backend/.cargo/: config.toml
backend/ai-service/: Cargo.toml  Makefile
backend/ai-service/src/: main.rs
backend/analytics-service/: Cargo.toml  Makefile
backend/analytics-service/src/: main.rs
backend/analytics-service/src/handlers/: get_writing_stats.rs
backend/authorizer/: Cargo.toml  Makefile
backend/authorizer/src/: main.rs
backend/common/: Cargo.toml  Makefile
backend/common/.cargo/: config.toml
backend/common/src/: ai.rs  gamification.rs  lib.rs  settings.rs
backend/db-init/: Makefile  index.js
backend/entry-service/: Cargo.toml  Makefile
backend/entry-service/src/: main.rs
backend/entry-service/src/handlers/: create_entry.rs  export_entries.rs  manage_tags.rs  search_entries.rs
backend/entry-service/src/services/: ai_integration.rs
backend/gamification-service/: Cargo.toml
backend/gamification-service/src/: main.rs
backend/infrastructure/: cognito.yaml  template-core.yaml  template.yaml
backend/infrastructure/docs/: api.md  architecture.md
backend/prompts-service/: Cargo.toml  Makefile  rust-toolchain.toml
backend/prompts-service/src/: main.rs
backend/prompts-service/src/handlers/: get_daily_prompt.rs  get_prompts.rs
backend/prompts-service/src/models/: prompt.rs
backend/scripts/: README.md  ar-guide.sh  build-ai-service.sh  build-all.sh  build-authorizer.sh  build-common.sh  common.sh  cross-build.sh  debug-utils.sh  deploy-phased.sh  deploy-stack.sh  fix-rust-version.sh  init.sh  install-llvm-ar.sh  set_env.sh  setup-phased-deployment.sh  setup-toolchain.sh  test-endpoints.sh  utils.sh  verify-lambda.sh
backend/settings-service/: Cargo.toml  Makefile
backend/settings-service/src/: main.rs
backend/settings-service/src/models/: settings.rs
config/: next-seo.config.ts
cypress/e2e/: example.cy.ts
docs/: api-gateway-auth.md  api-reference.md  auth-setup.md  google-oauth.md  user-guide.md
docs/features/: prompts.md
frontend/: .env.development  .env.example  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  components.json  jest.config.js  jest.setup.js  middleware.ts  mocha.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.jest.json  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  vercel.json
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/ai-insights/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/components/: ThemeToggle.tsx
frontend/app/config/: next-seo.config.ts
frontend/app/context/: ThemeContext.tsx
frontend/app/debug/: page.tsx
frontend/app/health/: page.tsx
frontend/app/hooks/: useTRPC.ts  useTheme.ts
frontend/app/journal/: layout.tsx  metadata.ts  page.tsx
frontend/app/lib/: prisma.ts
frontend/app/login/: page.tsx
frontend/app/logout/: page.tsx
frontend/app/prompts/: page.tsx
frontend/app/providers/: ClientProviders.tsx  Providers.tsx  TrpcProvider.tsx
frontend/app/rewards/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/status/: page.tsx
frontend/app/theme/: theme.ts
frontend/components/: ClientFooter.tsx  ClientOnly.tsx  DailyPrompt.tsx  DebugPanel.tsx  PromptCard.tsx  RandomPrompt.tsx  TopNavbar.tsx  TrpcExample.tsx  icons.tsx  theme-toggle.tsx  user-avatar.tsx
frontend/components/ai/: EntryInsights.tsx  ErrorBoundary.tsx  PromptGenerator.tsx  README.md  index.ts
frontend/components/auth/: LoginContent.tsx  SignupContent.tsx
frontend/components/date/: date-range-picker.tsx
frontend/components/debug/: DebugMonitorSkeleton.tsx  ServiceDebugMonitor.tsx
frontend/components/gamification/: achievement-card.tsx  index.ts  level-progress.tsx  points-badge.tsx  streak-display.tsx
frontend/components/health/: HealthDashboard.tsx  HealthStatusSkeleton.tsx  ServiceStatusItem.tsx
frontend/components/insights/: insights-sidebar.tsx
frontend/components/journal/: create-entry-button.tsx  entry-editor.tsx  insights-panel.tsx  insights-request-button.tsx  (+5 more)
frontend/config/: auth.config.ts  navigation.config.ts  next-seo.config.ts
frontend/context/: ApiConfigContext.tsx  SettingsContext.tsx  ThemeContext.tsx
frontend/hooks/: use-analytics.ts  use-auth.ts  use-fetch.ts  use-gamification.ts  use-journal-entries.ts  use-settings.ts  use-toast.ts  useAIInsights.ts  useAuthCheck.ts  useEntries.ts  useInsights.ts  useServiceStatus.ts  useTRPC.ts
frontend/lib/: api-client.ts  api-response-utils.ts  api-utils.ts  api.ts  auth-middleware.ts  auth-utils.ts  date-utils.ts  gamification-calculator.ts  metadata.ts  mock-utils.ts  mood-utils.ts  tag-colors.ts  transformer.ts  types.ts
frontend/public/: manifest.json  robots.txt  site.webmanifest  sw.js
frontend/scripts/: fix-ui-components.js
frontend/tests/: global-setup.js  global-teardown.js  setup.ts
frontend/types/: analytics.ts  api.ts  declarations.d.ts  entries.ts  gamification.ts  global.d.ts  index.ts  insights.ts  jest.d.ts  journal.ts  next-auth.d.ts  prompts.ts  radix-fix.d.ts  radix-ui.d.ts  react-augments.d.ts  react-components.d.ts  react-extensions.d.ts  react.d.ts  settings.ts  status.ts  toast.d.ts  toast.ts
frontend/utils/: debug.ts  environment.ts
prisma/: schema.prisma
scripts/: build-all.sh  common.sh  deploy-stack.sh  init.sh  test-endpoints.sh  verify-lambda.sh
tests/integration/: example.test.ts
tests/unit/: example.test.ts
(+89 files in other folders)
