[package]
name = "journal-ai-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use journal-common without rust-bert (use OpenAI/Anthropic APIs instead)
journal-common = { path = "../common" }

# Direct dependencies required for derive macros and runtime
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
aws_lambda_events = { version = "0.16.0", features = ["http", "cloudwatch_events"] }
aws-sdk-dynamodb = "=1.54.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"

# Fix transitive dependency feature issue
console = { version = "0.16.1", features = ["std"] }

# OpenSSL configuration for cross-compilation
[dependencies.openssl]
version = "0.10.71"
features = ["vendored"]