# backend/authorizer/Cargo.toml
[package]
name = "journal-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.16.0"
aws-lambda-runtime = "0.0.0"
jsonwebtoken = "9.3.1"
lambda_runtime = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }