[package]
name = "journal-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use the consolidated common package which already includes all needed dependencies
journal-common = { path = "../common", default-features = false, features = ["jwt-auth"] }

# Direct dependencies required for derive macros and runtime
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
aws_lambda_events = { version = "0.16.0", features = ["http"] }