[package]
name = "journal-common"
version = "0.1.0"
edition = "2021"
description = "Shared library for Reflekt Journal App services containing common dependencies and utilities"

[dependencies]
# AWS SDK dependencies with consistent versions
aws-config = { version = "1.6.0", features = ["rustls"] }
aws-sdk-dynamodb = "1.69.0"
aws-sdk-s3 = "1.79.0"
aws-sdk-secretsmanager = "1.66.0"
aws-sdk-eventbridge = "1.65.0"
aws_lambda_events = { version = "0.16.0", features = ["http", "cloudwatch_events"] }

# Lambda-related dependencies
lambda_http = "0.14.0"
lambda_runtime = "0.13.0"  # The correct AWS Lambda Runtime dependency

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.14.0"
# jsonwebtoken = "9.3.1"
jwt = { version = "0.16.0", features = ["openssl"] }

# Utility libraries
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
base64 = "0.22.1"  # Used by multiple services
rand = "0.9.0"     # Updated to match prompts-service version

# AI and ML libraries
rust-bert = "0.23.0"  # Hoisted from ai-service and settings-service

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11.8"  # Hoisted from ai-service

# Networking
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }

# Crypto and security - updated to latest OpenSSL with v3 support
openssl = { version = "0.10.71", features = ["vendored"] }

# Async runtime
tokio = { version = "1.44.0", features = ["full"] }