[package]
name = "journal-common"
version = "0.1.0"
edition = "2021"
description = "Shared library for Reflekt Journal App services containing common dependencies and utilities"

[dependencies]
# AWS SDK dependencies with consistent versions - use native-tls instead of rustls
aws-config = { version = "1.6.0", features = ["native-tls"], default-features = false }
aws-sdk-dynamodb = "1.69.0"
aws-sdk-s3 = "1.79.0"
aws-sdk-secretsmanager = "1.66.0"
aws-sdk-eventbridge = "1.65.0"
aws_lambda_events = { version = "0.16.0", features = ["http", "cloudwatch_events"] }

# Lambda-related dependencies
lambda_http = { version = "0.14.0", default-features = false, features = ["openssl"] }
lambda_runtime = { version = "0.13.0", default-features = false, features = ["openssl"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.14.0"
# jsonwebtoken = "9.3.1"
jwt = { version = "0.16.0", features = ["openssl"] }
hmac = "0.12.1"
sha2 = "0.10.8"

# Utility libraries
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
base64 = "0.22.1"  # Used by multiple services
rand = "0.9.0"     # Updated to match prompts-service version

# AI and ML libraries
rust-bert = { version = "0.23.0", default-features = false }  # Hoisted from ai-service and settings-service

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11.8"  # Hoisted from ai-service

# Networking
reqwest = { version = "0.12.14", default-features = false, features = ["json", "native-tls"] }

# Crypto and security - updated to latest OpenSSL with v3 support
openssl = { version = "0.10.71", features = ["vendored"] }

# Async runtime
tokio = { version = "1.44.0", features = ["full"] }

[features]
default = ["openssl", "jwt-auth"]
openssl = []
jwt-auth = ["jwt/openssl"]

# Prevent ring and aws-lc-sys from being included
[patch.crates-io]
# Replace ring with OpenSSL-based version
ring = { git = "https://github.com/briansmith/ring", features = ["force-openssl"] }

# Properly disable aws-lc dependencies by explicitly making them no-ops
aws-lc-rs = { git = "https://github.com/aws/aws-lc-rs", features = ["fips-static"] }
aws-lc-sys = { git = "https://github.com/aws/aws-lc-rs", package = "aws-lc-sys", optional = true }
