[package]
name = "journal-common"
version = "0.1.0"
edition = "2021"
description = "Shared library for Reflekt Journal App services containing common dependencies and utilities"

[dependencies]
# AWS SDK dependencies - pinned exactly to versions compatible with Rust 1.85.0
aws-config = { version = "=1.5.8", default-features = false, features = ["rustls"] }
aws-sdk-dynamodb = "=1.54.0"
aws-sdk-s3 = "=1.60.0"
aws-sdk-secretsmanager = "=1.50.0"
aws-sdk-eventbridge = "=1.51.0"
aws_lambda_events = { version = "0.16.0", features = ["http", "cloudwatch_events"] }

# Lambda-related dependencies
lambda_http = { version = "0.14.0", default-features = false, features = ["apigw_rest"] }
lambda_runtime = { version = "0.13.0", default-features = false }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.14.0"
# jsonwebtoken = "9.3.1"
jwt = { version = "0.16.0", features = ["openssl"] }
hmac = "0.12.1"
sha2 = "0.10.8"

# Utility libraries
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
base64 = "0.22.1"  # Used by multiple services
rand = "0.9.0"     # Updated to match prompts-service version

# AI and ML libraries - enable remote feature for default model download
rust-bert = { version = "0.23.0", default-features = true, optional = true }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11.8"  # Hoisted from ai-service

# Networking - use rustls explicitly instead of default features
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }

# Crypto and security - updated to latest OpenSSL with v3 support
openssl = { version = "0.10.71", features = ["vendored"] }

# Async runtime
tokio = { version = "1.44.0", features = ["full"] }

# Error handling
anyhow = "1.0"

[features]
default = ["openssl", "jwt-auth"]
openssl = []
jwt-auth = ["jwt/openssl"]
ai-features = ["rust-bert"]

# The patches are no longer needed since we're using environment variables
# to handle cross-compilation properly with:
# - AWS_LC_SYS_STATIC=1
# - AWS_LC_SYS_VENDORED=1
# - Using system ar for linking
