[package]
name = "journal-entry-service"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.6.0", features = ["rustls"] }
aws_lambda_events = "0.16.0"
aws-lambda-runtime = "0.0.0"
aws-sdk-dynamodb = "1.69.0"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
journal-common = { path = "../common" }
lambda_runtime = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.14.0"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
