[package]
name = "journal-entry-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use the consolidated common package
journal-common = { path = "../common" }

# Service-specific dependencies not in common
base64 = "0.22.1"

# Override tokio version if needed for compatibility
# tokio = { version = "1.28.2", features = ["full"] }