[package]
name = "journal-settings-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use the consolidated common package
journal-common = { path = "../common" }

# Service-specific dependencies
rust-bert = "0.23.0"

# Override tokio version if needed for compatibility
# tokio = { version = "1.28.2", features = ["full"] }