[package]
name = "journal-settings-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use the consolidated common package without AI features
journal-common = { path = "../common", default-features = false, features = ["openssl"] }

# All dependencies have been hoisted to journal-common
# No need for rust-bert in this service