[package]
name = "journal-settings-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use the consolidated common package without AI features
journal-common = { path = "../common", default-features = false, features = ["openssl"] }

# Direct dependencies required for derive macros and runtime
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
aws_lambda_events = { version = "0.16.0", features = ["http"] }
aws-sdk-dynamodb = "=1.54.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4.1", features = ["v4"] }